button in menu change

--- a/resources/css/style.scss
+++ b/resources/css/style.scss
@@ -1260,4 +1260,14 @@
 }
 .w-210{
     width: 210px;
+    height: 32px!important;
+    margin-top: auto!important;
+    margin-bottom: auto!important;
+    padding: .2rem .65rem!important;
+}
+.add-btn{
+    height: 32px!important;
+    margin-top: auto!important;
+    margin-bottom: auto!important;
+    padding: .2rem .65rem!important;
 }
