button in header change height

--- a/resources/css/style.scss
+++ b/resources/css/style.scss
@@ -1260,4 +1260,8 @@
 }
 .w-210{
     width: 210px;
+    height: 32px !important;
+    margin-top: auto !important;
+    margin-bottom: auto !important;
+    padding: 0.2rem 0.65rem !important;
 }
