--- a/resources/css/style.scss
+++ b/resources/css/style.scss
@@ -1260,6 +1260,8 @@
 }
 .w-210{
     width: 210px;
+}
+.add-btn{
     height: 32px !important;
     margin-top: auto !important;
     margin-bottom: auto !important;
