add show all categories, moved new ad button, showed if not logged, link footer title

--- a/resources/css/style.scss
+++ b/resources/css/style.scss
@@ -1267,3 +1267,15 @@
     margin-bottom: auto !important;
     padding: 0.2rem 0.65rem !important;
 }
+.cats-border{
+    border-top:1px solid #dddddd!important;
+}
+.cats-link{
+    font-size:14px!important;
+    font-weight:bold!important;
+    padding-left:7px!important;
+}
+.footer-links h2 a{
+    color: #333333;
+    text-decoration: none;
+}
