--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1398,4 +1398,7 @@
   margin-bottom: auto !important;
   padding: 0.2rem 0.65rem !important;
 }
+.order-1{
+  order: 1!important;
+}
 /*# sourceMappingURL=style.css.map */
