--- a/resources/views/partials/navigation.twig
+++ b/resources/views/partials/navigation.twig
@@ -6,14 +6,12 @@
 		</div>
 	</a>
 {% endif %}
-
 <nav class="container">
 	<div class="header-link-container d-none d-lg-flex pt-3 mb-1 flex-wrap">
 		{% for campaignLink in links('campaign_header').get() %}
 			<a href="{{ campaignLink.url }}">{{ campaignLink.title }}</a>
 		{% endfor %}
 	</div>
-
 	<div class="d-flex flex-wrap flex-lg-nowrap align-items-center mb-lg-3 pt-2 pt-md-4 pt-lg-0">
 		<div class="header-logo d-flex align-items-center">
 			<div class="flex-shrink-0">
@@ -24,16 +22,6 @@
 						<p>{{ trans('visiosoft.theme.uzicani::field.menu') }}</p>
 						<img src="{{ img('visiosoft.theme.uzicani::images/close.svg').url }}" alt="close button">
 					</div>
-					{% if (auth_check()) and (setting_value('visiosoft.theme.uzicani::show_button_in_menu'))  %}
-						<div class="d-flex justify-content-center mt-2 mb-2">
-							<a href="{{ setting_value('visiosoft.theme.uzicani::menu_button_url') }}" class="btn btn-primary  w-210  add-btn" rel="nofollow">
-								{% if (setting_value('visiosoft.theme.uzicani::menu_button_icon') )%}
-									<i class="{{ setting_value('visiosoft.theme.uzicani::menu_button_icon') }}"></i>
-								{% endif %}
-								{{ setting_value('visiosoft.theme.uzicani::menu_button_text') }}
-							</a>
-						</div>
-					{% endif %}
 					<div class="scroll-container">
 						<div class="mobile-menu">
 							<div class="mobile-menu-heading d-flex justify-content-between align-items-center">
@@ -88,7 +76,6 @@
 								{% endfor %}
 							</div>
 						</div>
-
 					</div>
 				</div>
 			</div>
@@ -106,6 +93,18 @@
 			</div>
 			<button type="submit" class="border-0">{{ trans('visiosoft.theme.uzicani::field.find')|upper }}</button>
 		</form>
+		<div class="order-1 d-lg-none flex-fill d-flex justify-content-center mb-md-2 mb-lg-0">
+			{% if (setting_value('visiosoft.theme.uzicani::show_button_in_menu'))  %}
+				<div class="d-flex justify-content-center mt-2 mb-2">
+					<a href="{{ setting_value('visiosoft.theme.uzicani::menu_button_url') }}" class="btn btn-primary  w-210  add-btn" rel="nofollow">
+						{% if (setting_value('visiosoft.theme.uzicani::menu_button_icon') )%}
+							<i class="{{ setting_value('visiosoft.theme.uzicani::menu_button_icon') }}"></i>
+						{% endif %}
+						{{ setting_value('visiosoft.theme.uzicani::menu_button_text') }}
+					</a>
+				</div>
+			{% endif %}
+		</div>
 
 		<div class="header-icon-container d-flex justify-content-end ml-lg-3">
 			<div class="d-flex align-items-center">
@@ -148,7 +147,6 @@
 		</div>
 	</div>
 </nav>
-
 <nav class="horizontal-menu d-none d-lg-block">
 	<div class="d-flex container position-relative">
 		{% for category in setting_value('visiosoft.theme.uzicani::horizontal_menu_categories') %}
@@ -190,7 +188,7 @@
 									{# {% endif %} #}
 								{% endfor %}
 							</div>
-							{#                            <div class="col-3 category-main-img d-none d-xl-block">#}
+							{# <div class="col-3 category-main-img d-none d-xl-block">#}
 						{#                                <a href="#" class="p-3 d-flex justify-content-between align-items-end link-unstyled"#}
 							{#                                   style="background-image: url('https://mcdn01.gittigidiyor.net/fred/page-based/header/img/sport.jpg');">#}
 							{#                                    <div>#}
@@ -201,13 +199,22 @@
 							{#                                        <img src="{{ img('visiosoft.theme.uzicani::images/more-categories.svg').url }}" alt="right arrow">#}
 							{#                                    </div>#}
 							{#                                </a>#}
-							{#                            </div>#}
+							{#                            </div> #}
 						</div>
+						{% if (setting_value('visiosoft.theme.uzicani::view_all_cats_show')) %}
+							{% if loop.first %}
+								<div class="row mt-3 cats-border">
+									<div class="offset-8 col-4 mt-3">
+										<a href="{{ setting_value('visiosoft.theme.uzicani::view_all_cats_url') }}" class="cats-link">{{ setting_value('visiosoft.theme.uzicani::view_all_cats_text') }}</a>
+									</div>
+								</div>
+							{% endif %}
+						{% endif %}
 					</div>
 				</div>
 			</div>
 		{% endfor %}
-		{% if  (auth_check()) and (setting_value('visiosoft.theme.uzicani::show_button_in_menu'))    %}
+		{% if (setting_value('visiosoft.theme.uzicani::show_button_in_menu'))   %}
 			<div class="d-flex ml-auto">
 				<a href="{{ setting_value('visiosoft.theme.uzicani::menu_button_url') }}" class="btn btn-primary w-210 add-btn" rel="nofollow">
 					{% if (setting_value('visiosoft.theme.uzicani::menu_button_icon') )%}
@@ -219,7 +226,6 @@
 		{% endif %}
 	</div>
 </nav>
-
 <script>
 	let downloadSVG = "{{ img('visiosoft.theme.uzicani::images/download.svg').url }}"
 </script>
