--- a/resources/views/partials/navigation.twig
+++ b/resources/views/partials/navigation.twig
@@ -22,37 +22,38 @@
 						<p>{{ trans('visiosoft.theme.uzicani::field.menu') }}</p>
 						<img src="{{ img('visiosoft.theme.uzicani::images/close.svg').url }}" alt="close button">
 					</div>
-					<div class="scroll-container">
-						<div class="mobile-menu">
-							<div class="mobile-menu-heading d-flex justify-content-between align-items-center">
-								<p>{{ trans('visiosoft.theme.uzicani::field.quick_browse') }}</p>
-								<img src="{{ img('visiosoft.theme.uzicani::images/download.svg').url }}" alt="arrow">
-							</div>
-							<div class="mobile-menu-panel">
-								<div class="mobile-menu-list">
-									<a href="{{ url_route('visiosoft.module.advs::list') }}?sort_by=popular" class="link-unstyled d-flex align-items-center">
-										<img src="{{ img('visiosoft.theme.uzicani::images/popular.svg').url }}" alt="popular">
-										<p>{{ trans('visiosoft.theme.uzicani::field.popular_ads') }}</p>
-									</a>
-									<a href="{{ url_route('visiosoft.module.advs::list') }}?date=two_days" class="link-unstyled d-flex align-items-center">
-										<img src="{{ img('visiosoft.theme.uzicani::images/clock.svg').url }}" alt="last 24 hours">
-										<p>{{ trans('visiosoft.theme.uzicani::field.last_48_hours') }}</p>
-									</a>
-									<a href="{{ url_route('visiosoft.module.advs::list') }}?get_ads=true" class="link-unstyled d-flex align-items-center">
-										<img src="{{ img('visiosoft.theme.uzicani::images/shield.svg').url }}" alt="secure">
-										<p>{{ trans('visiosoft.theme.uzicani::field.secure_e_commerce_ads') }}</p>
-									</a>
-									<a href="{{ url_route('advs::create_adv') }}" class="link-unstyled d-flex align-items-center">
-										<img src="{{ img('visiosoft.theme.uzicani::images/speaker.svg').url }}" alt="sell">
-										<p>{{ trans('visiosoft.theme.uzicani::field.sell') }}</p>
-									</a>
-								</div>
-								<div class="quick-browse-toggle-btn d-flex justify-content-between align-items-center">
-									<button class="border-0 px-0">{{ trans('visiosoft.theme.uzicani::field.see_all') }}</button>
-									<img src="{{ img('visiosoft.theme.uzicani::images/download.svg').url }}" alt="arrow">
-								</div>
-							</div>
-						</div>
+					<div
+						class="scroll-container">
+						{#	<div class="mobile-menu">
+													<div class="mobile-menu-heading d-flex justify-content-between align-items-center">
+														<p>{{ trans('visiosoft.theme.uzicani::field.quick_browse') }}</p>
+														<img src="{{ img('visiosoft.theme.uzicani::images/download.svg').url }}" alt="arrow">
+													</div>
+													<div class="mobile-menu-panel">
+														<div class="mobile-menu-list">
+															<a href="{{ url_route('visiosoft.module.advs::list') }}?sort_by=popular" class="link-unstyled d-flex align-items-center">
+																<img src="{{ img('visiosoft.theme.uzicani::images/popular.svg').url }}" alt="popular">
+																<p>{{ trans('visiosoft.theme.uzicani::field.popular_ads') }}</p>
+															</a>
+															<a href="{{ url_route('visiosoft.module.advs::list') }}?date=two_days" class="link-unstyled d-flex align-items-center">
+																<img src="{{ img('visiosoft.theme.uzicani::images/clock.svg').url }}" alt="last 24 hours">
+																<p>{{ trans('visiosoft.theme.uzicani::field.last_48_hours') }}</p>
+															</a>
+															<a href="{{ url_route('visiosoft.module.advs::list') }}?get_ads=true" class="link-unstyled d-flex align-items-center">
+																<img src="{{ img('visiosoft.theme.uzicani::images/shield.svg').url }}" alt="secure">
+																<p>{{ trans('visiosoft.theme.uzicani::field.secure_e_commerce_ads') }}</p>
+															</a>
+															<a href="{{ url_route('advs::create_adv') }}" class="link-unstyled d-flex align-items-center">
+																<img src="{{ img('visiosoft.theme.uzicani::images/speaker.svg').url }}" alt="sell">
+																<p>{{ trans('visiosoft.theme.uzicani::field.sell') }}</p>
+															</a>
+														</div>
+														<div class="quick-browse-toggle-btn d-flex justify-content-between align-items-center">
+															<button class="border-0 px-0">{{ trans('visiosoft.theme.uzicani::field.see_all') }}</button>
+															<img src="{{ img('visiosoft.theme.uzicani::images/download.svg').url }}" alt="arrow">
+														</div>
+													</div>
+												</div>#}
 						<div class="categories-wrapper">
 							<div class="categories-wrapper-title d-flex justify-content-between align-items-center">
 								<p>{{ trans('visiosoft.theme.uzicani::field.categories') }}</p>
