hide basketball icon

--- a/resources/views/partials/navigation.twig
+++ b/resources/views/partials/navigation.twig
@@ -161,7 +161,7 @@
 				<div class="horizontal-menu-detail position-absolute">
 					<div class="px-5">
 						<div class="horizontal-menu-header d-flex align-items-center">
-							<img src="{{ categoryEntry.icon.url }}" class=" mr-2" alt="basketball icon">
+							{# <img src="{{ categoryEntry.icon.url }}" class=" mr-2" alt="basketball icon"> #}
 							<a href="{{ url_route('adv_list_seo', [categoryEntry.slug]) }}">
 								{{ categoryEntry.name }}
 								{{ trans('visiosoft.theme.uzicani::field.category') }}
