--- a/resources/views/layouts/default.twig
+++ b/resources/views/layouts/default.twig
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
 	<head>
+		{% include "visiosoft.theme.base::partials/metadata" %}
 		{% include "visiosoft.theme.sahibinden::partials/metadata" %}
 		{% block styles %}{% endblock %}
 		{{ asset_style('visiosoft.theme.uzicani::css/swiper.min.css') }}
