--- a/resources/css/style.scss
+++ b/resources/css/style.scss
@@ -589,7 +589,10 @@
                 }
             }
         }
-
+        .language-navigation-field > a {
+            color: #000;
+            font-size: 14px;
+        }
         .horizontal-menu {
             background-color: #f4f4f4;
 
@@ -1256,7 +1259,72 @@
             }
         }
     }
+
+    .footer-mobile {
+        width: 100%;
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        background: #f7f7f7;
+        border: 1px solid #dedede;
+        padding: 1px 0;
+        margin: 0;
+        z-index: 300;
+        padding-bottom: calc(1px + env(safe-area-inset-bottom));
+
+        li {
+            display: inline-block;
+            text-align: center;
+            font-size: 12px;
+            height: 100%;
+            width: 20%;
+            overflow: visible;
+
+            a {
+                position: relative;
+                display: block;
+                width: 100%;
+                height: 100%;
+                padding-top: 30px;
+                font-size: 11px;
+                color: #333;
+
+                i {
+                    color: #939393;
+                }
+            }
+        }
+    }
     /* End Footer */
+    .left-categories-section {
+        margin-top: 18px;
+
+        .categories-list {
+            margin: 8px 2px 8px 0;
+
+            .categories-list-li {
+                padding: 0 0 0 37px;
+                border-bottom: none;
+                margin: 0 15px;
+
+                .main-category {
+                    color: #333;
+                    font-size: 16px;
+                    text-decoration: inherit;
+                }
+
+                .sub-categories {
+                    color: #bcbbbb;
+                    border-bottom: 1px solid #e6e6e6;
+                    margin: 0 0 0 7px;
+                    overflow: hidden;
+                    white-space: nowrap;
+                    text-overflow: ellipsis;
+                    font-size: 12px;
+                }
+            }
+        }
+    }
 }
 .w-210{
     width: 210px;
