change gg to uzicani

--- a/resources/css/style.scss
+++ b/resources/css/style.scss
@@ -38,7 +38,7 @@
 
     .gg-slider-button-prev, .gg-slider-button-next {
         position: absolute;
-        background-image: url("{{ img('visiosoft.theme.gg::images/slider-buttons.png').url }}");
+        background-image: url("{{ img('visiosoft.theme.uzicani::images/slider-buttons.png').url }}");
         background-size: 85px;
         width: 37px;
         height: 70px;
