--- a/resources/views/index/default.twig
+++ b/resources/views/index/default.twig
@@ -33,7 +33,7 @@
 			</div>
 		</div>
 	</section>
-	{% if setting_value('visiosoft.theme.gg::bottom_menu') %}
+	{% if setting_value('visiosoft.theme.uzicani::bottom_menu') %}
 		<div class="left-categories-section mx-0">
 			<div class="col-12 p-0 m-0">
 				{% set main_categories = getCategoriesLevel2() %}
