--- a/resources/views/partials/navigation.twig
+++ b/resources/views/partials/navigation.twig
@@ -14,7 +14,7 @@
 	</div>
 	<div class="d-flex flex-wrap flex-lg-nowrap align-items-center mb-lg-3 pt-2 pt-md-4 pt-lg-0">
 		<div class="header-logo d-flex align-items-center">
-			{% if not setting_value('visiosoft.theme.gg::bottom_menu') %}
+			{% if not setting_value('visiosoft.theme.uzicani::bottom_menu') %}
 				<div class="flex-shrink-0">
 					<img class="d-lg-none mr-2 mr-md-5 mobile-menu-toggler" src="{{ img('visiosoft.theme.uzicani::images/brg-menu.svg').url }}" alt="burger menu icon">
 					<div class="styled-mobile-menu position-fixed">
@@ -26,39 +26,39 @@
 						<div
 							class="scroll-container">
 							{#
-																																																																																		<div class="mobile-menu">
-																																																																																			<div class="mobile-menu-heading d-flex justify-content-between align-items-center">
-																																																																																				<p>{{ trans('visiosoft.theme.uzicani::field.quick_browse') }}</p>
-																																																																																				<img src="{{ img('visiosoft.theme.uzicani::images/download.svg').url }}" alt="arrow">
-																																																																																			</div>
-																																																																																			<div class="mobile-menu-panel">
-																																																																																				<div class="mobile-menu-list">
-																																																																																					<a href="{{ url_route('visiosoft.module.advs::list') }}?sort_by=popular" class="link-unstyled d-flex align-items-center">
-																																																																																						<img src="{{ img('visiosoft.theme.uzicani::images/popular.svg').url }}" alt="popular">
-																																																																																						<p>{{ trans('visiosoft.theme.uzicani::field.popular_ads') }}</p>
-																																																																																					</a>
-																																																																																					<a href="{{ url_route('visiosoft.module.advs::list') }}?date=two_days" class="link-unstyled d-flex align-items-center">
-																																																																																						<img src="{{ img('visiosoft.theme.uzicani::images/clock.svg').url }}" alt="last 24 hours">
-																																																																																						<p>{{ trans('visiosoft.theme.uzicani::field.last_48_hours') }}</p>
-																																																																																					</a>
-																																																																																					<a href="{{ url_route('visiosoft.module.advs::list') }}?get_ads=true" class="link-unstyled d-flex align-items-center">
-																																																																																						<img src="{{ img('visiosoft.theme.uzicani::images/shield.svg').url }}" alt="secure">
-																																																																																						<p>{{ trans('visiosoft.theme.uzicani::field.secure_e_commerce_ads') }}</p>
-																																																																																					</a>
-																																																																																					<a href="{{ url_route('advs::create_adv') }}" class="link-unstyled d-flex align-items-center">
-																																																																																						<img src="{{ img('visiosoft.theme.uzicani::images/speaker.svg').url }}" alt="sell">
-																																																																																						<p>{{ trans('visiosoft.theme.uzicani::field.sell') }}</p>
-																																																																																					</a>
-																																																																																				</div>
-																																																																																				<div class="quick-browse-toggle-btn d-flex justify-content-between align-items-center">
-																																																																																					<button class="border-0 px-0">{{ trans('visiosoft.theme.uzicani::field.see_all') }}</button>
-																																																																																					<img src="{{ img('visiosoft.theme.uzicani::images/download.svg').url }}" alt="arrow">
-																																																																																				</div>
-																																																																																			</div>
-																																																																																		</div>
-																																																																																		
-																																																																																		
-																																																																																														#}
+																																																																																																							<div class="mobile-menu">
+																																																																																																								<div class="mobile-menu-heading d-flex justify-content-between align-items-center">
+																																																																																																									<p>{{ trans('visiosoft.theme.uzicani::field.quick_browse') }}</p>
+																																																																																																									<img src="{{ img('visiosoft.theme.uzicani::images/download.svg').url }}" alt="arrow">
+																																																																																																								</div>
+																																																																																																								<div class="mobile-menu-panel">
+																																																																																																									<div class="mobile-menu-list">
+																																																																																																										<a href="{{ url_route('visiosoft.module.advs::list') }}?sort_by=popular" class="link-unstyled d-flex align-items-center">
+																																																																																																											<img src="{{ img('visiosoft.theme.uzicani::images/popular.svg').url }}" alt="popular">
+																																																																																																											<p>{{ trans('visiosoft.theme.uzicani::field.popular_ads') }}</p>
+																																																																																																										</a>
+																																																																																																										<a href="{{ url_route('visiosoft.module.advs::list') }}?date=two_days" class="link-unstyled d-flex align-items-center">
+																																																																																																											<img src="{{ img('visiosoft.theme.uzicani::images/clock.svg').url }}" alt="last 24 hours">
+																																																																																																											<p>{{ trans('visiosoft.theme.uzicani::field.last_48_hours') }}</p>
+																																																																																																										</a>
+																																																																																																										<a href="{{ url_route('visiosoft.module.advs::list') }}?get_ads=true" class="link-unstyled d-flex align-items-center">
+																																																																																																											<img src="{{ img('visiosoft.theme.uzicani::images/shield.svg').url }}" alt="secure">
+																																																																																																											<p>{{ trans('visiosoft.theme.uzicani::field.secure_e_commerce_ads') }}</p>
+																																																																																																										</a>
+																																																																																																										<a href="{{ url_route('advs::create_adv') }}" class="link-unstyled d-flex align-items-center">
+																																																																																																											<img src="{{ img('visiosoft.theme.uzicani::images/speaker.svg').url }}" alt="sell">
+																																																																																																											<p>{{ trans('visiosoft.theme.uzicani::field.sell') }}</p>
+																																																																																																										</a>
+																																																																																																									</div>
+																																																																																																									<div class="quick-browse-toggle-btn d-flex justify-content-between align-items-center">
+																																																																																																										<button class="border-0 px-0">{{ trans('visiosoft.theme.uzicani::field.see_all') }}</button>
+																																																																																																										<img src="{{ img('visiosoft.theme.uzicani::images/download.svg').url }}" alt="arrow">
+																																																																																																									</div>
+																																																																																																								</div>
+																																																																																																							</div>
+																																																																																																							
+																																																																																																							
+																																																																																																																			#}
 							<div class="categories-wrapper">
 								<div class="categories-wrapper-title d-flex justify-content-between align-items-center">
 									<p>{{ trans('visiosoft.theme.uzicani::field.categories') }}</p>
@@ -184,14 +184,14 @@
 										</h3>
 										<div class="overflow-hidden">
 											{% for subCategory in entrySubCategory.getSubCategories(entrySubCategory.id) %}
-												<a class="{{ setting_value('visiosoft.theme.gg::horizontal_menu_is_column') ? 'w-100' : '' }}" href="{{ url_route('adv_list_seo', [subCategory.slug]) }}">
+												<a class="{{ setting_value('visiosoft.theme.uzicani::horizontal_menu_is_column') ? 'w-100' : '' }}" href="{{ url_route('adv_list_seo', [subCategory.slug]) }}">
 													{{ subCategory.name }}
 												</a>
 											{% endfor %}
 										</div>
 										{# <a href="{{ url_route('adv_list_seo', [entrySubCategory.slug]) }}">
-																																																																																																																									{{ trans('visiosoft.theme.uzicani::field.view_all') }}
-																																																																																																																								</a> #}
+																																																																																																																																																							{{ trans('visiosoft.theme.uzicani::field.view_all') }}
+																																																																																																																																																						</a> #}
 									</div>
 									{# {% endif %} #}
 								{% endfor %}
@@ -233,14 +233,14 @@
 			</div>
 		{% endif %}
 		{# {% set pages = links(entries('navigation', 'menus').where('slug', 'horizontal_sub_menu').first().slug.value).get() %} 
-		<div class="px-2 px-xl-3 d-flex align-items-center ml-auto small">
-			{% for menu in pages %}
-				<a href="{{ menu.url }}" class="text-dark px-2">
-					{{ menu.title }}
-				</a>
-			{% endfor %}
-		</div>
-		#}
+								<div class="px-2 px-xl-3 d-flex align-items-center ml-auto small">
+									{% for menu in pages %}
+										<a href="{{ menu.url }}" class="text-dark px-2">
+											{{ menu.title }}
+										</a>
+									{% endfor %}
+								</div>
+								#}
 	</div>
 </nav>
 <script>
